// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Read application data Compound filters 1`] = `
[
  [
    {
      "apiKey": undefined,
      "authMode": undefined,
      "authToken": undefined,
      "endpoint": undefined,
      "query": "query($filter: ModelTodoFilterInput,$limit: Int,$nextToken: String) { listTodos(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id content description done priority createdAt updatedAt owner } nextToken __typename } }",
      "variables": {
        "filter": {
          "or": [
            {
              "priority": {
                "eq": 1,
              },
            },
            {
              "priority": {
                "eq": 2,
              },
            },
          ],
        },
      },
    },
    {},
  ],
]
`;

exports[`Read application data Fetch only the data you need with custom selection set 1`] = `
[
  [
    {
      "apiKey": undefined,
      "authMode": undefined,
      "authToken": undefined,
      "endpoint": undefined,
      "query": "query($id: ID!) { getBlog(id: $id) { author { email } publication { company { location { city } } } content { items { id title description blogId createdAt updatedAt } } } }",
      "variables": {
        "id": "<MY_BLOG_ID>",
      },
    },
    {},
  ],
]
`;

exports[`Read application data Filter list queries 1`] = `
[
  [
    {
      "apiKey": undefined,
      "authMode": undefined,
      "authToken": undefined,
      "endpoint": undefined,
      "query": "query($filter: ModelTodoFilterInput,$limit: Int,$nextToken: String) { listTodos(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id content description done priority createdAt updatedAt owner } nextToken __typename } }",
      "variables": {
        "filter": {
          "content": {
            "beginsWith": "hello",
          },
        },
      },
    },
    {},
  ],
]
`;

exports[`Read application data List and get your data 1`] = `
[
  [
    {
      "apiKey": undefined,
      "authMode": undefined,
      "authToken": undefined,
      "endpoint": undefined,
      "query": "query($filter: ModelTodoFilterInput,$limit: Int,$nextToken: String) { listTodos(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id content description done priority createdAt updatedAt owner } nextToken __typename } }",
      "variables": {},
    },
    {},
  ],
  [
    {
      "apiKey": undefined,
      "authMode": undefined,
      "authToken": undefined,
      "endpoint": undefined,
      "query": "query($productId: ID,$sortDirection: ModelSortDirection,$warehouseId: ModelIDKeyConditionInput,$filter: ModelInventoryFilterInput,$limit: Int,$nextToken: String) { listInventories(productId: $productId,sortDirection: $sortDirection,warehouseId: $warehouseId,filter: $filter,limit: $limit,nextToken: $nextToken) { items { productId warehouseId description createdAt updatedAt owner } nextToken __typename } }",
      "variables": {
        "productId": "...",
        "warehouseId": {
          "beginsWith": "...",
        },
      },
    },
    {},
  ],
  [
    {
      "apiKey": undefined,
      "authMode": undefined,
      "authToken": undefined,
      "endpoint": undefined,
      "query": "query($productId: ID!,$warehouseId: ID!) { getInventory(productId: $productId,warehouseId: $warehouseId) { productId warehouseId description createdAt updatedAt owner } }",
      "variables": {
        "productId": "...",
        "warehouseId": "...",
      },
    },
    {},
  ],
]
`;

exports[`Read application data Paginate list queries 1`] = `
[
  [
    {
      "apiKey": undefined,
      "authMode": undefined,
      "authToken": undefined,
      "endpoint": undefined,
      "query": "query($filter: ModelTodoFilterInput,$limit: Int,$nextToken: String) { listTodos(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id content description done priority createdAt updatedAt owner } nextToken __typename } }",
      "variables": {
        "limit": 100,
        "nextToken": "eyJ2ZXJzaW9uejE1a2...",
      },
    },
    {},
  ],
]
`;

exports[`Read application data TypeScript type helpers for Amplify Data part 2 1`] = `
[
  [
    {
      "apiKey": undefined,
      "authMode": undefined,
      "authToken": undefined,
      "endpoint": undefined,
      "query": "query($filter: ModelPostFilterInput,$limit: Int,$nextToken: String) { listPosts(filter: $filter,limit: $limit,nextToken: $nextToken) { items { content author comments { items { id content author postId createdAt updatedAt } } } nextToken __typename } }",
      "variables": {},
    },
    {},
  ],
]
`;
